# easymund

./: .gitignore  README.md
client/: index.html  index.js  processor.js  wasm_processor.js
client-processor/: Cargo.toml  build.bat
client-processor/src/: lib.rs  processor.rs
client/assets/: index-2Uee3X_Y.js  index-Aaiqo_cU.js  index-BGNsIG7h.js  index-BGXon5Tx.js  index-BLVzQYLu.js  index-BUyvgfg6.js  index-BXib4VdP.css  index-BYFW0RbN.css  index-BthyicxC.css  index-CJhDr-jp.css  index-COHIkVJT.js  index-CXmqp9WD.css  index-C_va328R.js  index-CaGjceQy.css  index-Cl_MQTC_.js  index-CxmlT4cf.css  index-D4Ye1Biu.js  index-D6bHQQ0J.css  index-D9G6_0Zd.js  index-DaV5-oFq.js  index-PVR0J21S.js  index-bnmIfim_.js  index-cvQRX2nK.js  index-ntuXLxgM.css  index-oLtdiuon.js  index-rVbr5ebE.js
client/pack/: easymund_client_processor_bg.wasm
codec/: Cargo.toml
codec/src/: codec.rs  lib.rs
server/: Cargo.toml
server/config/: easymund.yaml  log4rs.yaml
server/src/: ambience.rs  dto.rs  easymund.rs  event_handler.rs  httpserver.rs  main.rs  wsserver.rs
vue-client/: README.md  index.html  layout.html  layout_login.html  package.json
vue-client/public/: easymund_client_processor.js  wasm_processor.js
vue-client/src/: App.vue  audio.js  event_bus.js  room_state.js  screen_share.js  ws.js
vue-client/src/components/: Chat.vue  ChatMessage.vue  Create.vue  Login.vue  Participant.vue  Room.vue
