[package]
name = "easymund-server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
log4rs = "1.2.0"
rustls = "0.22.1"
rustls-pemfile = {version = "2.0.0"}
tokio = {version = "1.35.0", features = ["full"]}
tokio-rustls = "0.25.0"
sha1 = "0.10.6"
base64 = "0.21.5"
wav = "1.0.0"
easymund-audio-codec = {path = "../codec"}